# flowi

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_docker.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  github-actions.yml
docs/: README.md  flowi-namespace.yml  install_microk8s.sh  setup.sh  setup_secrets.sh  ubuntu_setup.md
docs/airflow/: Dockerfile  airflow-deployment.yml  airflow-rbac.yml  airflow-service.yml  airflow-virtual-service.yaml  airflow.cfg  airflow.cfg.old  create_user.sh  kubeconfig.yaml  pod.yml  setup_airflow.sh
docs/dask/: dask-virtual-service.yaml  install_dask.sh  values.yaml
docs/flowi-ui/: flowi-ui-deployment.yaml  flowi-ui-deployment.yml  flowi-ui-service.yaml  flowi-ui-service.yml  flowi-ui-statefull-set.yml  flowi-ui-virtual-service.yaml  setup_flowi-ui.sh
docs/istio/: flowi-virtual-service.yml  gateway.yaml  seldon-gateway.yaml
docs/k8sSpark/: cleanup.sh  install_spark.sh  pyspark-pi.yaml  pyspark.yaml  spark-pi.yaml  spark-rbac.yaml
docs/knative/: broker.yaml  broker.yml  cifar10.yml  cifar10cd.yml  istio-minimal-operator.yaml  message-dumper.yaml  message-dumper.yml  mq.py  setup_knative.sh  test.py  trigger.yml
docs/minio/: minio-deployment.yaml  minio-deployment.yml  minio-job.yaml  (+6 more)
flowi/: __init__.py  __main__.py  settings.py
nginx/: nginx.conf
tests/: drift_detector.pkl  end2end.py  flowi.py  input_transformer.pkl  iris.csv  iris_pred.csv  model.pkl  output_transformer.pkl  test_dataset.csv  test_end2end.py
(+113 files in other folders)
