[tool.poetry]
name = "flowi"
version = "0.2.1"
description = ""
authors = ["Leonardo Silva <psilva.leo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = "^2021.4.0"
pandas = "^1.2.4"
cloudpickle = "^1.6.0"
distributed = "^2021.4.0"
scikit-learn = "^0.24.1"
dask-ml = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
