[tool.poetry]
name = "flowi"
version = "0.3.15"
description = ""
authors = ["Leonardo Silva <psilva.leo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = "2021.5.0"
distributed = "2021.5.0"
numpy = "1.19.3"
dask-ml = "^1.8.0"
pandas = "^1.2.4"
cloudpickle = "^1.6.0"
scikit-learn = "^0.24.1"
dill = "^0.3.3"
mlflow = "^1.15.0"
toml = "^0.10.2"
pymongo = "^3.11.3"
s3fs = "^2021.4.0"
boto3 = "^1.17.0"
requests = "^2.25.1"
botocore = "^1.20.49"
aiobotocore = "^1.3.0"
tensorflow = "^2.0"
alibi-detect = "0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pre-commit = "^2.12.1"
mongomock = "^3.22.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
